compiler/src/test/resources/amyc/typer/failing/IfError3.amy
module IfError
  val x: Int = if (false) { "" } else { "" };
  x
end IfError
